@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-07T08:23:25Z",
+  "timestamp" : "2022-10-07T16:27:59Z",
   "count_outdated" : 565,
   "uniques_outdated" : 325,
-  "count" : 590,
+  "count" : 589,
   "uniques" : 338,
   "clones" : [
     {
       "timestamp": "2022-09-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
