@@ -1,3 +1,11 @@
+2022-10-07T16:27:59Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3206237214
+* notice: last 14d: unq all: 5 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 325 565 / 338 590
+* notice: next accum: outdated-unq outdated-all / unq all: 325 565 / 338 589
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-09-23]
+
 2022-10-07T08:23:25Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3203310745
 * notice: last 14d: unq all: 5 25
